refactor(api): optimize caching mechanisms and improve book filtering logic